--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
       "Microsoft": "Information"
     }
   },
+
   "IdentityServer": {
     "Domain": "http://localhost:5000",
     "ClientId": "minplan"
@@ -18,6 +19,10 @@
   "Auth0": {
     "Domain": "https://sandsconsulting.eu.auth0.com",
     "ClientId": "4ysSbachb7x5MtFiy7OuqtHxe2WNt1yt"
+  },
+  "Idfy": {
+    "Domain": "https://oauth2test.signere.com",
+    "ClientId": "tce509221ed3f4011bd5747dfb8d165e5"
   }
 }
 
