--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -19,16 +19,18 @@
     },
     "MinPlan": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUP__KEYVAULT__CONFIGURATIONENABLED": "true",
         "ASPNETCORE_HOSTINGSTARTUP__KEYVAULT__CONFIGURATIONVAULT": "https://MinPlan-0-kv.vault.azure.net"
       }
-    },
+    }
+    ,
     "cli": {
       "commandName": "Project",
       "launchBrowser": false,
+      "applicationUrl": "https://localhost:9001;http://localhost:9000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
