--- a/MinPlan.csproj
+++ b/MinPlan.csproj
@@ -4,7 +4,7 @@
     <UserSecretsId>4ff74c9d-db5a-4a02-ace6-60d19d760544</UserSecretsId>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants></DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
